--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: py.test -lsvvv -lsvvv --cov=codecademy --cov-branch tests
+script: py.test -lsvvv --cov=codecademy --cov-branch tests
