--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ python:
 #  - "3.7-dev" # 3.7 development branch
 #  - "nightly" # currently points to 3.7-dev
 # command to install dependencies
-install: "pip install -r requirements.txt"
+install:
+  - pip install -r requirements.txt
+  - pip install codecov
 # command to run tests
-script: py.test -lsvvv tests
+script: py.test -lsvvv --cov=codecademy --cov-branch tests
+after_success:
+  - codecov
