publish junit xml report

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = -lsvvv --cov=codecademy --cov-branch --cov-report=html --cov-report=term
+addopts = -ls --cov=codecademy --cov-branch --cov-report=html --cov-report=term --junit-xml=report.xml --html=report.html --self-contained-html
