Added Jenkinsfile to define Jenkins pipeline (#32)
* Added Jenkinsfile to define Jenkins pipeline

* trying to run as root

* added docker args to run as root

* publish junit xml report

* added pytest-html dependency

* use pytest.ini default options

* trying to add html publishing

* Jenkinsfile: fixed syntax error - closing bracket

* fix html report file name

* reportDir

* Update .gitignore

* switched to alpine based python docker image

* use archiveArtifacts

* Travis: run on python 3.7 instead of 3.6

* dummy changes

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,10 @@ coverage.xml
 *.cover
 .hypothesis/
 
+# Test reports
+report.xml
+report.html
+
 # Translations
 *.mo
 *.pot
@@ -103,5 +107,5 @@ ENV/
 # PyCharm
 .idea
 
-# macOS internal files
+# macOS files
 .DS_Store
