--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ install:
   - pip install -r requirements.txt
   - pip install codecov
 # command to run tests
-script: py.test -lsvvv --cov=codecademy --cov-branch tests
+script: pytest -lsvvv --cov=codecademy --cov-branch tests
 after_success:
   - codecov
