--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-pytest
-pytest-cov
-pytest-html
+atomicwrites==1.3.0
+attrs==19.3.0
+coverage==4.5.4
+importlib-metadata==0.23
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
+pyparsing==2.4.2
+pytest==5.2.2
+pytest-cov==2.8.1
+pytest-html==2.0.0
+pytest-metadata==1.8.0
+six==1.12.0
+wcwidth==0.1.7
+zipp==0.6.0
