--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,21 @@
-pytest
-pytest-cov
-pytest-html
+atomicwrites==1.3.0
+attrs==19.3.0
+configparser==4.0.2
+contextlib2==0.6.0.post1
+coverage==4.5.4
+funcsigs==1.0.2
+importlib-metadata==0.23
+more-itertools==5.0.0
+packaging==19.2
+pathlib2==2.3.5
+pluggy==0.13.0
+py==1.8.0
+pyparsing==2.4.2
+pytest==4.6.6
+pytest-cov==2.8.1
+pytest-html==1.22.0
+pytest-metadata==1.8.0
+scandir==1.10.0
+six==1.12.0
+wcwidth==0.1.7
+zipp==0.6.0
